--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@material-ui/core": "^4.11.0",
+    "@syncfusion/ej2-angular-calendars": "^18.3.42",
+    "@syncfusion/ej2-angular-navigations": "^18.3.42",
     "ag-grid-angular": "^24.1.0",
     "ag-grid-community": "^24.1.0",
     "core-js": "^2.5.4",
