--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@material-ui/core": "^4.11.0",
+    "@syncfusion/ej2-angular-buttons": "^18.3.40",
     "@syncfusion/ej2-angular-calendars": "^18.3.42",
     "@syncfusion/ej2-angular-navigations": "^18.3.42",
     "ag-grid-angular": "^24.1.0",
