--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@material-ui/core": "^4.11.0",
     "@syncfusion/ej2-angular-buttons": "^18.3.40",
     "@syncfusion/ej2-angular-calendars": "^18.3.42",
+    "@syncfusion/ej2-angular-dropdowns": "^18.3.44",
     "@syncfusion/ej2-angular-navigations": "^18.3.42",
     "ag-grid-angular": "^24.1.0",
     "ag-grid-community": "^24.1.0",
